Se añadió los DTO's , ademas de acomodar el pattern de la fecha a dd/mm/yyyy y refactorizo metodos para el añadido a tiempo real